@@ -284,7 +284,7 @@ __start:
 #endif
 	/* Perform early serial initialization */
 
-#if defined(CONFIG_DEV_CONSOLE) && CONFIG_NFILE_DESCRIPTORS > 0
+#ifdef CONFIG_USE_EARLYSERIALINIT
 	bl      up_earlyserialinit
 #endif
 
