@@ -131,6 +131,8 @@ CONFIG_HAVE_LIBM=n
 #   Used to initialize the internal time logic.
 # CONFIG_DEV_CONSOLE - Set if architecture-specific logic
 #   provides /dev/console.  Enables stdout, stderr, stdin.
+# CONFIG_DEV_LOWCONSOLE - Use the simple, low-level serial console
+#   driver (minimul support)
 #
 CONFIG_EXAMPLE=ostest
 CONFIG_DEBUG=n
@@ -145,6 +147,7 @@ CONFIG_START_MONTH=2
 CONFIG_START_DAY=21
 CONFIG_JULIAN_TIME=n
 CONFIG_DEV_CONSOLE=n
+CONFIG_DEV_LOWCONSOLE=n
 
 #
 # The following can be used to disable categories of
