@@ -131,9 +131,8 @@ CONFIG_START_YEAR=2007
 CONFIG_START_MONTH=2
 CONFIG_START_DAY=21
 CONFIG_JULIAN_TIME=n
-CONFIG_DEV_CONSOLE=y
 CONFIG_HAVE_LOWUARTINIT=n
-CONFIG_DEV_LOWCONSOLE=y
+CONFIG_DEV_CONSOLE=y
 CONFIG_DEV_LOWCONSOLE=n
 
 #
